...
          create: (context) => ProfileBloc()..add(const ProfileLoadRequested()),
        ),
        BlocProvider(create: (context) => ProblemsBloc()),
        BlocProvider(create: (context) => MachineControllerBloc()),
      ],
      child: MaterialApp(
        title: 'Graphics Performance Spike',
        theme: ThemeData(primarySwatch: Colors.blue),
        home: const ProfileIntegratedApp(),
      ),
    );
  }
}
...
